--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.4.2
   cloud_firestore: ^4.8.0
   stacked_services: ^1.1.0
+  animated_card: ^2.0.0
   
 
 dev_dependencies:
